syntax = "proto3";

package yandex.cloud.events.network;

import "google/rpc/status.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/vpc/v1/subnet.proto";
import "yandex/cloud/events/options.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/vpc;network";
option java_package = "yandex.cloud.api.events.network";

message CreateSubnet {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string subnet_id = 1 [(required) = true];
        string subnet_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        string zone_id = 5 [(required) = true];
        repeated string v4_cidr_blocks = 6;
        repeated string v6_cidr_blocks = 7;
        string route_table_id = 8;
        string route_table_name = 9;
        yandex.cloud.vpc.v1.DhcpOptions dhcp_options = 10;
    }

    message RequestParameters {
        string folder_id = 1;
        string name = 2;
        map<string, string> labels = 3;
        string network_id = 4;
        string zone_id = 5;
        repeated string v4_cidr_blocks = 6;
        string route_table_id = 7;
        yandex.cloud.vpc.v1.DhcpOptions dhcp_options = 8;
    }
}

message UpdateSubnet {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string subnet_id = 1 [(required) = true];
        string subnet_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        string zone_id = 5 [(required) = true];
        repeated string v4_cidr_blocks = 6;
        repeated string v6_cidr_blocks = 7;
        string route_table_id = 8;
        string route_table_name = 9;
        yandex.cloud.vpc.v1.DhcpOptions dhcp_options = 10;
   }

    message RequestParameters {
        string subnet_id = 1;
        google.protobuf.FieldMask update_mask = 2;
        string name = 3;
        map<string, string> labels = 4;
        string route_table_id = 5;
        yandex.cloud.vpc.v1.DhcpOptions dhcp_options = 6;
    }
}

message DeleteSubnet {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string subnet_id = 1 [(required) = true];
        string subnet_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
    }

    message RequestParameters {
        string subnet_id = 1;
    }
}

message MoveSubnet {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string subnet_id = 1 [(required) = true];
        string subnet_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        string source_folder_id = 5;
        string destination_folder_id = 6;
    }

    message RequestParameters {
        string subnet_id = 1;
        string destination_folder_id = 2;
    }
}
